--- a/src/main/resources/static/auth.html
+++ b/src/main/resources/static/auth.html
@@ -431,149 +431,164 @@
 </div>
 
 <footer>
-    <p>&copy; 2024 Astronaut. All rights reserved.</p>
+    <p>&copy; 2025 Astronaut. All rights reserved.</p>
 </footer>
 
-<script>
-    // Form switching functionality
-    const tabButtons = document.querySelectorAll('.tab-button');
-    const formContainers = document.querySelectorAll('.form-container');
-    const switchFormLinks = document.querySelectorAll('.switch-form');
+<script>// Form switching functionality
+const tabButtons = document.querySelectorAll('.tab-button');
+const formContainers = document.querySelectorAll('.form-container');
+const switchFormLinks = document.querySelectorAll('.switch-form');
 
-    function switchForm(targetForm) {
-        // Hide all forms and deactivate all tabs
-        formContainers.forEach(form => form.classList.remove('active'));
-        tabButtons.forEach(btn => btn.classList.remove('active'));
+function switchForm(targetForm) {
+    // Hide all forms and deactivate all tabs
+    formContainers.forEach(form => form.classList.remove('active'));
+    tabButtons.forEach(btn => btn.classList.remove('active'));
 
-        // Show target form and activate corresponding tab
-        const targetFormElement = document.getElementById(targetForm + 'Form');
-        const targetTabButton = document.querySelector(`[data-tab="${targetForm}"]`);
+    // Show target form and activate corresponding tab
+    const targetFormElement = document.getElementById(targetForm + 'Form');
+    const targetTabButton = document.querySelector(`[data-tab="${targetForm}"]`);
 
-        if (targetFormElement) {
-            targetFormElement.classList.add('active');
-        }
-        if (targetTabButton) {
-            targetTabButton.classList.add('active');
-        }
-
-        // Clear messages
-        clearMessages();
+    if (targetFormElement) {
+        targetFormElement.classList.add('active');
+    }
+    if (targetTabButton) {
+        targetTabButton.classList.add('active');
     }
 
-    // Tab button click handlers
-    tabButtons.forEach(button => {
-        button.addEventListener('click', () => {
-            const targetForm = button.getAttribute('data-tab');
-            switchForm(targetForm);
-        });
+    // Clear messages
+    clearMessages();
+}
+
+// Tab button click handlers
+tabButtons.forEach(button => {
+    button.addEventListener('click', () => {
+        const targetForm = button.getAttribute('data-tab');
+        switchForm(targetForm);
     });
+});
 
-    // Switch form link handlers
-    switchFormLinks.forEach(link => {
-        link.addEventListener('click', (e) => {
-            e.preventDefault();
-            const targetForm = link.getAttribute('data-target');
-            switchForm(targetForm);
-        });
-    });
-
-    // Password visibility toggle
-    const passwordToggles = document.querySelectorAll('.password-toggle');
-
-    passwordToggles.forEach(toggle => {
-        toggle.addEventListener('click', (e) => {
-            e.preventDefault();
-            const inputId = toggle.getAttribute('data-toggle');
-            const input = document.getElementById(inputId);
-            const icon = toggle.querySelector('i');
-
-            if (input.type === 'password') {
-                input.type = 'text';
-                icon.classList.remove('ri-eye-line');
-                icon.classList.add('ri-eye-off-line');
-            } else {
-                input.type = 'password';
-                icon.classList.remove('ri-eye-off-line');
-                icon.classList.add('ri-eye-line');
-            }
-        });
-    });
-
-    // Message display functions
-    function showMessage(formType, message, type) {
-        const messageElement = document.getElementById(formType + 'Message');
-        messageElement.textContent = message;
-        messageElement.className = `message show ${type}`;
-    }
-
-    function clearMessages() {
-        const messages = document.querySelectorAll('.message');
-        messages.forEach(msg => msg.classList.remove('show'));
-    }
-
-    // Form submission
-    const loginForm = document.getElementById('loginForm');
-    const registerForm = document.getElementById('registerForm');
-
-    loginForm.addEventListener('submit', async (e) => {
+// Switch form link handlers
+switchFormLinks.forEach(link => {
+    link.addEventListener('click', (e) => {
         e.preventDefault();
-        clearMessages();
-
-        const email = document.getElementById('loginEmail').value;
-        const password = document.getElementById('loginPassword').value;
-
-        try {
-            const response = await fetch(`${window.origin}/auth/login`, {
-                method: 'POST',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({ email, password })
-            });
-
-            if (!response.ok) {
-                const error = await response.json();
-                showMessage('login', error.message, 'error');
-                return;
-            }
-
-            setTimeout(() => {
-                window.location.href = `${window.origin}/dashboard.html`;
-            }, 500);
-        } catch (err) {
-            console.error('Login error:', err);
-            showMessage('login', 'An error occurred during login', 'error');
-        }
+        const targetForm = link.getAttribute('data-target');
+        switchForm(targetForm);
     });
+});
 
-    registerForm.addEventListener('submit', async (e) => {
+// Password visibility toggle
+const passwordToggles = document.querySelectorAll('.password-toggle');
+
+passwordToggles.forEach(toggle => {
+    toggle.addEventListener('click', (e) => {
         e.preventDefault();
-        clearMessages();
+        const inputId = toggle.getAttribute('data-toggle');
+        const input = document.getElementById(inputId);
+        const icon = toggle.querySelector('i');
 
-        const username = document.getElementById('registerUsername').value;
-        const email = document.getElementById('registerEmail').value;
-        const password = document.getElementById('registerPassword').value;
-        const confirmPassword = document.getElementById('confirmPassword').value;
-
-        try {
-            const response = await fetch(`${window.origin}/auth/register`, {
-                method: 'POST',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({ username, email, password, confirmPassword })
-            });
-
-            if (!response.ok) {
-                const error = await response.json();
-                showMessage('register', error.message, 'error');
-                return;
-            }
-
-            setTimeout(() => {
-                window.location.href = `${window.origin}/dashboard.html`;
-            }, 500);
-        } catch (err) {
-            console.error('Register error:', err);
-            showMessage('register', 'An error occurred during registration', 'error');
+        if (input.type === 'password') {
+            input.type = 'text';
+            icon.classList.remove('ri-eye-line');
+            icon.classList.add('ri-eye-off-line');
+        } else {
+            input.type = 'password';
+            icon.classList.remove('ri-eye-off-line');
+            icon.classList.add('ri-eye-line');
         }
     });
-</script>
+});
+
+// Message display functions
+function showMessage(formType, message, type) {
+    const messageElement = document.getElementById(formType + 'Message');
+    messageElement.textContent = message;
+    messageElement.className = `message show ${type}`;
+}
+
+function clearMessages() {
+    const messages = document.querySelectorAll('.message');
+    messages.forEach(msg => msg.classList.remove('show'));
+}
+
+// Form submission
+const loginForm = document.getElementById('loginForm');
+const registerForm = document.getElementById('registerForm');
+
+loginForm.addEventListener('submit', async (e) => {
+    e.preventDefault();
+    clearMessages();
+
+    const email = document.getElementById('loginEmail').value;
+    const password = document.getElementById('loginPassword').value;
+
+    try {
+        const response = await fetch(`${window.origin}/auth/login`, {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify({ email, password })
+        });
+
+        if (!response.ok) {
+            const error = await response.json();
+            showMessage('login', error.message, 'error');
+            return;
+        }
+
+        const userData = await response.json();
+
+        // Store user data for dashboard display
+        sessionStorage.setItem('astronaut_user', JSON.stringify({
+            username: userData.username,
+            email: userData.email
+        }));
+
+        setTimeout(() => {
+            window.location.href = `${window.origin}/dashboard.html`;
+        }, 200);
+    } catch (err) {
+        console.error('Login error:', err);
+        showMessage('login', 'An error occurred during login', 'error');
+    }
+});
+
+registerForm.addEventListener('submit', async (e) => {
+    e.preventDefault();
+    clearMessages();
+
+    const username = document.getElementById('registerUsername').value;
+    const email = document.getElementById('registerEmail').value;
+    const password = document.getElementById('registerPassword').value;
+    const confirmPassword = document.getElementById('confirmPassword').value;
+
+    try {
+        const response = await fetch(`${window.origin}/auth/register`, {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify({ username, email, password, confirmPassword })
+        });
+
+        if (!response.ok) {
+            const error = await response.json();
+            showMessage('register', error.message, 'error');
+            return;
+        }
+
+        const userData = await response.json();
+
+        // Store user data for dashboard display
+        sessionStorage.setItem('astronaut_user', JSON.stringify({
+            username: userData.username,
+            email: userData.email
+        }));
+
+        setTimeout(() => {
+            window.location.href = `${window.origin}/dashboard.html`;
+        }, 200);
+    } catch (err) {
+        console.error('Register error:', err);
+        showMessage('register', 'An error occurred during registration', 'error');
+    }
+});</script>
 </body>
 </html>
+
