--- a/src/main/resources/static/dashboard.html
+++ b/src/main/resources/static/dashboard.html
@@ -5,24 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Astronaut - Code Snippet Dashboard</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.min.css">
-    <link rel="stylesheet", href="css/dashboard.css">
+    <link rel="stylesheet" href="css/dashboard.css">
+    <link rel="stylesheet" href="css/header.css">
 </head>
 <body>
-<!-- Header -->
-<header>
-    <div class="header-left">
-        <div class="app-name">
-            <i class="ri-rocket-2-line"></i> Astronaut
-        </div>
-    </div>
-    <div class="header-right">
-        <div class="username"></div>
-        <button class="settings-btn" title="Settings">
-            <i class="ri-settings-3-line"></i>
-        </button>
-    </div>
-</header>
-
 <!-- Main Container -->
 <div class="container">
     <!-- Search Section -->
@@ -125,6 +111,7 @@
     <i class="ri-add-line"></i>
 </button>
 
+<script src="js/header.js"></script>
 <script src="js/dashboard.js"></script>
 </body>
 </html>
