--- a/src/main/resources/static/snippet-detail.html
+++ b/src/main/resources/static/snippet-detail.html
@@ -6,6 +6,7 @@
     <title>Snippet Detail - Astronaut</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.min.css">
     <link rel="stylesheet" href="css/snippet.css">
+    <link rel="stylesheet" href="css/toast.css">
 </head>
 <body>
 <!-- Header -->
@@ -179,6 +180,7 @@
         </div>
     </div>
 </div>
+<script src="js/toast.js"></script>
 <script src="js/snippet-detail.js"></script>
 </body>
 </html>
