Revamp Snippet Detail Page and UI
Introduce a dedicated snippet detail page with view, edit, and diff comparison.
Render code with syntax highlighting and notes with Markdown.
Enhance dashboard UI by making search filters and snippet cards more compact.
Increase `extraNotes` length to 500 characters and trim incoming snippet content.
Remove redundant sections from the marketing landing page (`index.html`).
Add password visibility toggle in settings.

--- a/src/main/resources/static/snippet-detail.html
+++ b/src/main/resources/static/snippet-detail.html
@@ -5,25 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snippet Detail - Astronaut</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.min.css">
-    <link rel="stylesheet" href="css/snippet.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/atom-one-dark.min.css">
+    <link rel="stylesheet" href="css/snippet-detail.css">
     <link rel="stylesheet" href="css/toast.css">
 </head>
 <body>
-<!-- Header -->
-<div class="header">
-    <div class="header-left">
-        <a href="#" class="logo" onclick="goToDashboard(event)">
-            <i class="ri-rocket-2-line"></i>
-            Astronaut
-        </a>
-    </div>
-    <div class="header-right">
-        <button class="btn-back-header" onclick="goToDashboard()">
-            <i class="ri-arrow-left-line"></i>
-            Back to Dashboard
-        </button>
-    </div>
-</div>
 
 <!-- Main Container -->
 <div class="container">
@@ -180,6 +167,7 @@
         </div>
     </div>
 </div>
+<script src="js/header.js"></script>
 <script src="js/toast.js"></script>
 <script src="js/snippet-detail.js"></script>
 </body>
