--- a/src/main/resources/static/auth.html
+++ b/src/main/resources/static/auth.html
@@ -266,8 +266,7 @@
             text-align: center;
             color: #64748b;
             font-size: 0.875rem;
-            border-top: 1px solid rgba(148, 163, 184, 0.1);
-            background: rgba(15, 23, 42, 0.5);
+            background: transparent;
             margin-top: auto;
         }
 
