--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -27,28 +27,22 @@
         }
 
         body {
-            /* 2. ADD PADDING TO PUSH CONTENT DOWN BELOW THE NEW FIXED HEADER (70px height) */
             padding-top: 70px;
         }
-
-        /* 3. REMOVED OLD NAVIGATION BAR CSS STYLES */
 
         /* Hero Section */
         .hero {
             width: 1200px;
             margin: 0 auto;
-            /* Adjusted padding-top as the body now handles the top space */
-            padding: 50px 40px 80px;
+            padding: 50px 40px 40px;
             text-align: center;
-            min-height: 100vh;
+            min-height: 70vh;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
         }
-        /* ... [Remaining styles are unchanged, as they only affect main content] ... */
 
-        /* Hero Section */
         .hero-content {
             max-width: 800px;
         }
@@ -90,7 +84,6 @@
             display: inline-block;
         }
 
-        /* Keeping button styles, as they are used in the hero section */
         .btn-login {
             background: transparent;
             color: #94a3b8;
@@ -118,7 +111,6 @@
             padding: 16px 40px;
             font-size: 16px;
         }
-
 
         /* Decorative Elements */
         .hero-decoration {
@@ -150,7 +142,7 @@
         .features {
             width: 1200px;
             margin: 0 auto;
-            padding: 80px 40px;
+            padding: 40px 40px 80px;
             background: linear-gradient(180deg, rgba(15, 23, 42, 0) 0%, rgba(14, 165, 233, 0.05) 100%);
         }
 
@@ -229,42 +221,9 @@
             z-index: 1;
         }
 
-        /* CTA Section */
-        .cta-section {
-            width: 1200px;
-            margin: 0 auto;
-            padding: 80px 40px;
-            text-align: center;
-        }
-
-        .cta-section h2 {
-            font-size: 42px;
-            font-weight: 700;
-            margin-bottom: 24px;
-            color: #e2e8f0;
-        }
-
-        .cta-section p {
-            font-size: 16px;
-            color: #cbd5e1;
-            margin-bottom: 40px;
-        }
-
-        /* Footer */
-        footer {
-            width: 1200px;
-            margin: 0 auto;
-            padding: 40px;
-            border-top: 1px solid #1e293b;
-            text-align: center;
-            color: #64748b;
-            font-size: 14px;
-        }
-
         /* Responsive Design */
         @media (max-width: 1200px) {
-            /* Removed 'nav' from this list */
-            .hero, .features, .cta-section, footer {
+            .hero, .features {
                 width: 100%;
             }
 
@@ -274,8 +233,6 @@
         }
 
         @media (max-width: 768px) {
-            /* Removed 'nav' styling */
-
             .hero {
                 padding: 100px 20px 60px;
             }
@@ -309,7 +266,6 @@
             }
         }
 
-        /* Code-like accent */
         .code-accent {
             font-family: 'Courier New', monospace;
             color: #10b981;
@@ -325,7 +281,7 @@
     <div class="hero-decoration-left"></div>
     <div class="hero-content">
         <h1>Manage Your Code Snippets with Ease</h1>
-        <p>Astronaut is a modern platform for developers to store, organize, and share code snippets. Keep your most useful code at your fingertips with powerful search and organization tools.</p>
+        <p>Astronaut is a modern platform for developers to store and organize code snippets. Keep your most useful code at your fingertips with powerful search and organization tools.</p>
         <div class="hero-buttons">
             <a href="auth.html" class="btn btn-primary btn-large">Get Started</a>
         </div>
@@ -365,18 +321,6 @@
         </div>
     </div>
 </section>
-
-<section class="cta-section">
-    <h2>Ready to Get Started?</h2>
-    <p>Join thousands of developers who are already using Astronaut to manage their code snippets.</p>
-    <div class="hero-buttons">
-        <a href="auth.html" class="btn btn-primary btn-large">Get Started Now</a>
-    </div>
-</section>
-
-<footer>
-    <p>&copy; 2025 Astronaut. All rights reserved. | Terms of Service | Privacy Policy</p>
-</footer>
 
 <script src="js/header.js"></script>
 
