Fix snippet parsing, Redis, and search filters
- Update JavaParser to support Java 21, resolving parsing issues for newer code.
- Ensure snippet language defaults to `OTHER` when not explicitly provided.
- Resolve a `ClassCastException` in the rate limiting filter when fetching data from Redis.
- Correct advanced search filter field assignments in the dashboard UI.
- Change database column definitions for snippet `content` and `extra_notes` to `TEXT`.
- Add no-argument constructor to `SnippetParseException`.
- Update `CHANGELOGS.md` and `README.md`.
- Adjust development environment configuration.

--- a/src/main/resources/static/dashboard.html
+++ b/src/main/resources/static/dashboard.html
@@ -40,27 +40,27 @@
                 <div class="search-fields-grid">
                     <div class="search-field">
                         <label>Class Names</label>
-                        <input type="text" placeholder="e.g., UserService">
+                        <input type="text" id="classNames" placeholder="e.g., UserService">
                     </div>
                     <div class="search-field">
                         <label>Class Annotations</label>
-                        <input type="text" placeholder="e.g., Service">
+                        <input type="text" id="classAnnotations" placeholder="e.g., Service">
                     </div>
                     <div class="search-field">
                         <label>Class Field Types</label>
-                        <input type="text" placeholder="e.g., String, int">
+                        <input type="text" id="classFields" placeholder="e.g., String, int">
                     </div>
                     <div class="search-field">
                         <label>Class Field Annotations</label>
-                        <input type="text" placeholder="e.g., Column">
+                        <input type="text" id="classFieldAnnotations" placeholder="e.g., Column">
                     </div>
                     <div class="search-field">
                         <label>Method Return Types</label>
-                        <input type="text" placeholder="e.g., String, void">
+                        <input type="text" id="methodReturnTypes" placeholder="e.g., String, void">
                     </div>
                     <div class="search-field">
                         <label>Method Annotations</label>
-                        <input type="text" placeholder="e.g., RabbitListener">
+                        <input type="text" id="methodAnnotations" placeholder="e.g., RabbitListener">
                     </div>
                     <div class="search-field">
                         <label>Language</label>
